--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -4,16 +4,19 @@
   <meta charset="UTF-8">
   <title>Angular Data</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/lib/angular/angular.min.js"></script>
+  <script src="js/lib/angular/angular-route.min.js"></script>
+  <script src="js/lib/angular/angular-animate.min.js"></script>
+
 </head>
 <body>
   <header>
-    <nav class="cf">
-
-    </nav>
+    <nav class="cf" ng-include="'views/nav.html'"></nav>
   </header>
   <div class="page">
     <main class="cf">
-
+      <h1>Hello {{name}}</h1>
+      <input ng-model="name" placeholder="enter your name">
     </main>
   </div>
 </body>
