--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -5,11 +5,14 @@
   <title>Angular Data</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/lib/angular/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script src="js/lib/angular/angular-route.min.js"></script>
   <script src="js/lib/angular/angular-animate.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers/registration.js"></script>
+  <script src="js/controllers/meetings.js"></script>
+  <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+   <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
 </head>
 <body>
   <header>
