Added firebase for adding meettings

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -11,6 +11,18 @@
   <script src="js/app.js"></script>
   <script src="js/controllers/registration.js"></script>
   <script src="js/controllers/meetings.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDhE3sXxOk-CjLVvO94BVr3mYbuw5ciMWo",
+      authDomain: "attendanceldcapp-85101.firebaseapp.com",
+      databaseURL: "https://attendanceldcapp-85101.firebaseio.com",
+      storageBucket: "attendanceldcapp-85101.appspot.com",
+    };
+    firebase.initializeApp(config);
+  </script>
   <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
    <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
 </head>
